k8s/mediaserver/_audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.241
spec:
  type: LoadBalancer
  selector:
    app: audiobookshelf
  ports:
    - port: 80
      targetPort: 80
