k8s/mediaserver/_audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: mediaserver
spec:
  rules:
    - host: "audiobookshelf.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: audiobookshelf-service
                port:
                  number: 80
